--- a/style.css
+++ b/style.css
@@ -93,3 +93,35 @@ ul.dropdown-menu li a {
 .news-slide-hover img {
   transition: transform 0.4s ease;
 }
+/*======================================
+    Section-8 Section title css Start
+=======================================*/
+
+
+.section-divider {
+  width: 100%;
+  height: 3px;
+  background-color: #ddd; /* লাইন কালার */
+  position: relative;
+  margin: 20px 0;
+}
+
+.section-divider .divider-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+
+/*=====================================================================
+                Category Page CSS Start
+==================================================================*/
+.for-linear-gradiant{
+  background: linear-gradient(180deg,transparent 10.87%,rgba(0,0,0,.6) 53.06%,#000);
+}
+
+/*=====================================================================
+                Category Page CSS End
+==================================================================*/
+
