updated single page

--- a/style.css
+++ b/style.css
@@ -129,3 +129,14 @@ ul.dropdown-menu li a {
                 Category Page CSS End
 ==================================================================*/
 
+/*=====================================================================
+                Single Page CSS Start
+==================================================================*/
+.for-scroll{
+  overflow: auto;
+  max-height: 320px;
+}
+
+/*=====================================================================
+                Single Page CSS End
+==================================================================*/
