--- a/style.css
+++ b/style.css
@@ -62,6 +62,16 @@ ul.dropdown-menu li a {
     transition: all 0.3s ease;
 }
 
+
+/*===================================
+        Section-2 css Start
+===================================*/
+
+.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
+  color: red !important;
+  background: none !important;
+}
+
 /*===================================
         Section-4 Slider css Start
 ===================================*/
@@ -134,7 +144,7 @@ ul.dropdown-menu li a {
 ==================================================================*/
 .for-scroll{
   overflow: auto;
-  max-height: 320px;
+  max-height: 370px;
 }
 
 /*=====================================================================
