--- a/style.css
+++ b/style.css
@@ -133,6 +133,8 @@ ul.dropdown-menu li a {
 ==================================================================*/
 .for-linear-gradiant{
   background: linear-gradient(180deg,transparent 10.87%,rgba(0,0,0,.6) 53.06%,#000);
+  padding: 150px 0px 0px;
+
 }
 
 /*=====================================================================
